--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/router": "^1.6.1",
+    "@types/node": "^16.7.8",
+    "@types/webpack-env": "^1.16.2",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "webpack-env": "^0.8.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
