update sass loader

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/router": "^1.6.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@types/node": "^16.7.8",
     "@types/webpack-env": "^1.16.2",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
+    "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
     "webpack-env": "^0.8.0"
   },
@@ -32,7 +34,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "fibers": "^5.0.0",
     "postcss": "^8.3.5",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "sass": "^1.38.2",
+    "sass-loader": "^10.2.0"
   }
 }
