--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@nuxtjs/router": "^1.6.1",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/node": "^16.7.8",
+    "@types/vuelidate": "^0.7.15",
     "@types/webpack-env": "^1.16.2",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
+    "vuelidate": "^0.7.6",
     "webpack-env": "^0.8.0"
   },
   "devDependencies": {
